Fixed spacing issue in testing patient dropzone

--- a/frontend/src/styles/components/testing/_Testing.scss
+++ b/frontend/src/styles/components/testing/_Testing.scss
@@ -27,8 +27,7 @@
   .patient-dropzone {
     margin: auto;
     width: 55%;
-    padding-top: 2em;
-    padding-bottom: 2em;
+    padding: 2em 1em;
     text-align: center;
     border-width: 0.25em;
     border-color: $gray;
